# sp-daaa-davi-ca1-hdb-price-dashboard

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml  requirements-dev.txt  requirements-notebooks.txt
.github/workflows/: ci.yml
admin/: academic_integrity_declaration.docx
data/raw/: location_enriched_hdb_resale_metadata.txt
docs/: ACADEMIC_INTEGRITY.md  DATA_DICTIONARY.md  DATA_SOURCES.md  METHODOLOGY.md  PROJECT_CONTEXT.md  QUALITY_ASSURANCE.md
notebooks/: 01_hdb_resale_data_cleaning.ipynb  02_location_enriched_data_cleaning.ipynb
reports/written/: hdb_resale_price_report.docx
scripts/: clean_data.py  validate_data.py
tests/: test_data_validation.py
